fix: project thumb spacing

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -62,8 +62,8 @@
 .projectList {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     max-width: 1200px;
     width: 100%;
 }
